Cambiando nombre de alumno

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
+<!doctype html>
 <html>
 <head>
   <title>Mi primera web</title>
 </head>
-
 <body>
- <h1>¡Buenos días!</h1>
- <h2>IDAT</h2>
+  <h1>¡Buenos días!</h1>
+  <h2>IDAT - Cesar Anthony Villavicencio Rivera</h2>
+  <h3>Dreamweaver</h3>	
+  
+
+  <table cellpadding="23" cellspacing="2" width="50%" border="1">
+	<tr>
+		<th> Alumno </th>  
+		<th> Url Publica </th>
+		<th> Url Tarea </th>
+	</tr>
+	<tr>
+		<td> Cesar Anthony Villavicencio Rivera </td>  
+		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a> </td>
+		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/tarea.html">Ver</a>  </td>
+	</tr> 
+	  
+  </table>
+ 
 </body>
 </html>
