--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
-<html>
-<head>
-  <title>Mi primera web</title>
-</head>
+<! doctype html >
+< html >
+< cabeza >
+  < título > Mi primera web </ título >
+</ cabeza >
+< cuerpo >
+< < < < < < <  CABEZA
+  < h1 > ¡Buenos días! </ h1 >
+  < h2 > IDAT - Cesar Anthony Villavicencio Rivera </ h2 >
+  < h3 > Dreamweaver </ h3 >	
+  
 
-<body>
- <h1>¡Buenos días!</h1>
- <h2>IDAT</h2>
-  <img src="img/nazca.jpg"/>
-</body>
-</html>
+  < table  cellpadding = " 23 " cellspacing = " 2 " width = " 50% " border = " 1 " >
+	< tr >
+		< th > Alumno </ th >  
+		< th > Url Publica </ th >
+		< th > Url Tarea </ th >
+	</ tr >
+	< tr >
+		< td > Cesar Anthony Villavicencio Rivera </ td >  
+		< Td >  < un  href = " https://jucamayo.github.io/DWS08_2020_01/index.html " > Ver </ una >  </ td >
+		< Td >  < un  href = " https://jucamayo.github.io/DWS08_2020_01/tarea.html " > Ver </ una >   </ td >
+	</ tr > 
+	  
+  </ table >
+ 
+=======
+ < h1 > ¡Buenos días! </ h1 >
+ < h2 > IDAT </ h2 >
+  < img  src = " img / nazca.jpg " />
+> > > > > > > Origen / gh-páginas
+</ cuerpo >
+</ html >
