--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
 	</tr>
 	<tr>
 		<td> Cesar Anthony Villavicencio Rivera </td>  
-		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a> </td>
+		<td> <a href="https://cesartony09.github.io/DWS08_2020/index.html">Ver</a> </td>
 		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/tarea.html">Ver</a>  </td>
 	</tr> 
 	  
   </table>
  
-=======
- <h1>¡Buenos días!</h1>
- <h2>IDAT</h2>
-  <img src="img/nazca.jpg"/>
->>>>>>> origin/gh-pages
+
 </body>
 
 </html>
