--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<tr>
 		<td> Cesar Anthony Villavicencio Rivera </td>  
 		<td> <a href="https://cesartony09.github.io/DWS08_2020/index.html">Ver</a> </td>
-		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/tarea.html">Ver</a>  </td>
+		<td> <a href="https://cesartony09.github.io/DWS08_2020/tarea.html">Ver</a>  </td>
 	</tr> 
 	  
   </table>
